# forge

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Makefile  PRD.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0002_add_user_table.py  0003_add_llm_provider_table.py  0004_add_conversation_message_tables.py  0005_chat_completions_fields.py  0006_add_trace_data_to_message.py  0007_add_mcp_server_table.py  0008_add_skill_table.py  0009_add_uploaded_file_table.py  0010_add_embedding_settings.py  0011_add_skill_directories_and_skill_content.py  0012_add_message_source_data.py  0bdc60677f9a_add_web_search_settings.py  37f1742a38bd_add_mcp_transport_type_and_url.py  46b781f3b083_initial_empty_schema.py
backend/app/: main.py
backend/app/core/: chroma_client.py  config.py  database.py  encryption.py  security.py
backend/app/models/: __init__.py  conversation.py  llm_provider.py  mcp_server.py  message.py  settings.py  skill.py  uploaded_file.py  user.py
backend/app/services/: embedding_service.py  file_service.py  mcp_process_manager.py  orchestrator.py  retrieval_service.py  run_state.py  skill_discovery.py  trace_emitter.py
backend/app/tests/: conftest.py  test_auth.py  test_auth_integration.py  test_chat.py  test_chat_completions.py  test_chroma_client.py  test_chunking.py  test_database.py  test_embedding_service.py  test_embedding_settings.py  test_encryption.py  test_file_upload.py  test_health.py  (+14 more)
(+206 files in other folders)
